WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72535
Assertion failure in LayerFlushScheduler::resume() when running some layout tests in WebKitTestRunner
https://bugs.webkit.org/show_bug.cgi?id=72535
Summary
Assertion failure in LayerFlushScheduler::resume() when running some layout t...
Andy Estes
Reported
2011-11-16 12:33:21 PST
Assertion failure in LayerFlushScheduler::resume() when running some layout tests in WebKitTestRunner
Attachments
Patch
(4.36 KB, patch)
2011-11-16 12:39 PST
,
Andy Estes
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2011-11-16 12:34:02 PST
<
rdar://problem/10455522
>
Andy Estes
Comment 2
2011-11-16 12:34:27 PST
This is causing the test crashes seen here:
http://build.webkit.org/builders/Lion%20Intel%20Debug%20%28WebKit2%20Tests%29/builds/1808/steps/layout-test/logs/stdio
Andy Estes
Comment 3
2011-11-16 12:39:25 PST
Created
attachment 115424
[details]
Patch
Andy Estes
Comment 4
2011-11-16 12:43:23 PST
Committed
r100492
: <
http://trac.webkit.org/changeset/100492
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug